--- a/package.json
+++ b/package.json
@@ -1,26 +1,34 @@
 {
   "name": "gatsby-source-sanity",
   "description": "Gatsby source plugin for building websites using Sanity.io as a backend.",
-  "version": "0.1.0",
+  "version": "0.1.3",
   "author": "Henrique Cavalieri <henrique@kaordica.com.br>",
   "repository": "https://github.com/hcavalieri/gatsby-source-sanity",
   "homepage": "https://github.com/hcavalieri/gatsby-source-sanity#readme",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/hcavalieri/gatsby-source-sanity/issues"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "gatsby",
     "gatsby-plugin",
     "gatsby-source-plugin"
   ],
-  "license": "MIT",
+  "main": "index.js",
+  "scripts": {
+    "build": "babel src --out-dir . --ignore __tests__",
+    "prepublish": "yarn build"
+  },
   "dependencies": {
     "@sanity/client": "^0.132.5"
   },
+  "devDependencies": {
+    "@babel/cli": "^7.0.0-beta.44",
+    "@babel/core": "^7.0.0-beta.44",
+    "@babel/preset-env": "^7.0.0-beta.44",
+    "cross-env": "^5.1.3"
+  },
   "peerDependencies": {
-    "gatsby": "next"
+    "gatsby": ">2.0.0-alpha"
   }
 }
