--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gatsby-source-sanity",
   "description": "Gatsby source plugin for building websites using Sanity.io as a backend.",
-  "version": "0.1.3",
+  "version": "0.2.2",
   "author": "Henrique Cavalieri <henrique@kaordica.com.br>",
   "repository": "https://github.com/hcavalieri/gatsby-source-sanity",
   "homepage": "https://github.com/hcavalieri/gatsby-source-sanity#readme",
@@ -16,7 +16,7 @@
   ],
   "main": "index.js",
   "scripts": {
-    "build": "babel src --out-dir . --ignore __tests__",
+    "build": "babel src --out-dir .",
     "prepublish": "yarn build"
   },
   "dependencies": {
