--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gatsby-source-sanity",
   "description": "Gatsby source plugin for building websites using Sanity.io as a backend.",
-  "version": "0.4.1",
+  "version": "0.5.1",
   "author": "Henrique Cavalieri <henrique@kaordica.com.br>",
   "repository": "https://github.com/hcavalieri/gatsby-source-sanity",
   "homepage": "https://github.com/hcavalieri/gatsby-source-sanity#readme",
@@ -14,23 +14,35 @@
     "gatsby-plugin",
     "gatsby-source-plugin"
   ],
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "build": "babel src --out-dir ."
+    "precommit": "tsc",
+    "build": "tsc",
+    "type-check": "tsc --noEmit",
+    "format": "prettier --write src/**/*.{ts,tsx}",
+    "type-gen": "dts-gen -m @sanity/client"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   },
   "dependencies": {
-    "@babel/runtime": "7.0.0-beta.52",
     "@sanity/client": "^0.132.5",
     "@sanity/image-url": "^0.132.5",
-    "gatsby-source-filesystem": "2.0.1-beta.10"
+    "gatsby-source-filesystem": "^2.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.44",
-    "@babel/core": "^7.0.0-beta.44",
-    "@babel/preset-env": "^7.0.0-beta.44",
-    "cross-env": "^5.1.3"
+    "@types/node": "^10.11.7",
+    "cross-env": "^5.1.3",
+    "husky": "^1.1.2",
+    "prettier": "^1.14.3",
+    "pretty-quick": "^1.7.0",
+    "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.15.0",
+    "typescript": "^3.1.3"
   },
   "peerDependencies": {
-    "gatsby": ">2.0.0-alpha"
+    "gatsby": "^2.0.0"
   }
 }
