--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
       "email": "henrique@kaordica.com.br"
     }
   ],
+  "engines": {
+    "node": ">=8.0.0"
+  },
   "repository": "https://github.com/sanity-io/gatsby-source-sanity",
   "homepage": "https://github.com/sanity-io/gatsby-source-sanity#readme",
   "license": "MIT",
@@ -20,13 +23,13 @@
     "gatsby-plugin",
     "gatsby-source-plugin"
   ],
-  "main": "dist/index.js",
+  "main": "index.js",
   "scripts": {
+    "clean": "rm -f gatsby-node.*",
     "precommit": "tsc",
     "build": "tsc",
-    "type-check": "tsc --noEmit",
     "format": "prettier --write src/**/*.{ts,tsx}",
-    "type-gen": "dts-gen -m @sanity/client"
+    "watch": "tsc --watch"
   },
   "husky": {
     "hooks": {
@@ -34,17 +37,28 @@
     }
   },
   "dependencies": {
-    "@sanity/client": "^0.136.2",
-    "@sanity/image-url": "^0.136.0",
-    "gatsby-source-filesystem": "^2.0.12"
+    "@sanity/client": "^0.138.0",
+    "@sanity/image-url": "^0.138.0",
+    "@sanity/mutator": "^0.138.0",
+    "axios": "^0.18.0",
+    "gatsby-source-filesystem": "^2.0.12",
+    "graphql-tools": "^3.0.4",
+    "lodash": "^4.17.11",
+    "pump": "^3.0.0",
+    "split2": "^3.1.0",
+    "through2": "^3.0.0"
   },
   "devDependencies": {
-    "@types/node": "^10.12.12",
-    "cross-env": "^5.1.3",
+    "@types/graphql": "^14.0.3",
+    "@types/lodash": "^4.14.119",
+    "@types/node": "^10.0.0",
+    "@types/pump": "^1.0.1",
+    "@types/split2": "^2.1.6",
+    "@types/through2": "^2.0.34",
     "eslint": "^5.10.0",
     "eslint-config-prettier": "^3.3.0",
-    "eslint-config-sanity": "^0.136.0",
-    "husky": "^1.2.0",
+    "eslint-config-sanity": "^0.138.0",
+    "husky": "^1.2.1",
     "prettier": "^1.15.3",
     "pretty-quick": "^1.8.0",
     "typescript": "^3.2.2"
