--- a/package.json
+++ b/package.json
@@ -41,10 +41,12 @@
     "@sanity/image-url": "^0.138.0",
     "@sanity/mutator": "^0.138.0",
     "axios": "^0.18.0",
+    "debug": "^4.1.0",
     "gatsby-source-filesystem": "^2.0.12",
     "graphql-tools": "^3.0.4",
     "lodash": "^4.17.11",
     "pump": "^3.0.0",
+    "rxjs": "^6.3.3",
     "split2": "^3.1.0",
     "through2": "^3.0.0"
   },
