Add working mocked node implementation to fix missing fields

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@sanity/mutator": "^0.138.0",
     "axios": "^0.18.0",
     "debug": "^4.1.0",
+    "easygraphql-mock": "^0.1.7",
     "gatsby-source-filesystem": "^2.0.12",
     "graphql-tools": "^3.0.4",
     "lodash": "^4.17.11",
