--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "debug": "^4.1.0",
     "easygraphql-mock": "^0.1.7",
     "flatted": "^2.0.0",
+    "fs-extra": "^7.0.1",
     "gatsby-source-filesystem": "^2.0.12",
     "graphql-tools": "^3.0.4",
     "lodash": "^4.17.11",
@@ -55,6 +56,7 @@
     "through2": "^3.0.0"
   },
   "devDependencies": {
+    "@types/fs-extra": "^5.0.4",
     "@types/graphql": "^14.0.3",
     "@types/jest": "^23.3.12",
     "@types/lodash": "^4.14.119",
