Add gatsby dependency and update easygraphql-mock

--- a/package.json
+++ b/package.json
@@ -44,9 +44,10 @@
     "@sanity/mutator": "^0.138.0",
     "axios": "^0.18.0",
     "debug": "^4.1.0",
-    "easygraphql-mock": "^0.1.7",
+    "easygraphql-mock": "^0.1.11",
     "flatted": "^2.0.0",
     "fs-extra": "^7.0.1",
+    "gatsby": "^2.0.118",
     "graphql-tools": "^3.0.4",
     "lodash": "^4.17.11",
     "pump": "^3.0.0",
