--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "fs-extra": "^7.0.1",
     "graphql-tools": "^3.0.4",
     "lodash": "^4.17.11",
+    "oneline": "^1.0.2",
     "pump": "^3.0.0",
     "rxjs": "^6.3.3",
     "split2": "^3.1.0",
