--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@sanity/client": "^0.140.11",
     "@sanity/image-url": "^0.140.9",
     "@sanity/mutator": "^0.140.0",
+    "@types/url-parse": "^1.4.3",
     "axios": "^0.18.0",
     "debug": "^4.1.0",
     "fs-extra": "^7.0.1",
@@ -50,7 +51,8 @@
     "pump": "^3.0.0",
     "rxjs": "^6.3.3",
     "split2": "^3.1.1",
-    "through2": "^3.0.1"
+    "through2": "^3.0.1",
+    "url-parse": "^1.4.4"
   },
   "devDependencies": {
     "@types/debug": "^4.1.2",
@@ -65,7 +67,7 @@
     "eslint": "^5.15.3",
     "eslint-config-prettier": "^4.1.0",
     "eslint-config-sanity": "^0.140.0",
-    "gatsby": "^2.2.0",
+    "gatsby": "^2.3.2",
     "husky": "^1.2.1",
     "jest": "^24.5.0",
     "prettier": "^1.15.3",
