--- a/package.json
+++ b/package.json
@@ -32,39 +32,40 @@
     "prepublishOnly": "npm run build && npm test"
   },
   "dependencies": {
-    "@sanity/client": "^0.140.11",
-    "@sanity/image-url": "^0.140.9",
-    "@sanity/mutator": "^0.140.0",
+    "@sanity/client": "^0.142.6",
+    "@sanity/image-url": "^0.140.15",
+    "@sanity/mutator": "^0.142.6",
     "@types/url-parse": "^1.4.3",
     "axios": "^0.19.0",
     "debug": "^4.1.0",
-    "fs-extra": "^8.0.1",
+    "fs-extra": "^8.1.0",
+    "get-stream": "^5.1.0",
     "lodash": "^4.17.15",
     "oneline": "^1.0.2",
     "pump": "^3.0.0",
-    "rxjs": "^6.3.3",
+    "rxjs": "^6.5.3",
     "split2": "^3.1.1",
     "through2": "^3.0.1",
     "url-parse": "^1.4.4"
   },
   "devDependencies": {
-    "@types/debug": "^4.1.2",
-    "@types/fs-extra": "^7.0.0",
-    "@types/graphql": "^14.0.5",
-    "@types/jest": "^24.0.11",
-    "@types/lodash": "^4.14.123",
-    "@types/node": "^10.0.0",
+    "@types/debug": "^4.1.5",
+    "@types/fs-extra": "^8.0.1",
+    "@types/graphql": "^14.5.0",
+    "@types/jest": "^24.0.19",
+    "@types/lodash": "^4.14.144",
+    "@types/node": "^12.11.5",
     "@types/pump": "^1.0.1",
     "@types/split2": "^2.1.6",
     "@types/through2": "^2.0.34",
-    "eslint": "^5.15.3",
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-config-sanity": "^0.140.0",
-    "gatsby": "^2.3.2",
-    "jest": "^24.5.0",
-    "prettier": "^1.15.3",
-    "ts-jest": "^24.0.0",
-    "typescript": "^3.3.3333"
+    "eslint": "^6.5.1",
+    "eslint-config-prettier": "^6.4.0",
+    "eslint-config-sanity": "^0.142.6",
+    "gatsby": "^2.17.2",
+    "jest": "^24.9.0",
+    "prettier": "^1.18.2",
+    "ts-jest": "^24.1.0",
+    "typescript": "^3.6.4"
   },
   "peerDependencies": {
     "gatsby": "^2.2.0"
