--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gatsby-source-sanity",
   "description": "Gatsby source plugin for building websites using Sanity.io as a backend.",
-  "version": "5.0.6",
+  "version": "6.0.0-beta.0",
   "author": "Sanity.io <hello@sanity.io>",
   "contributors": [
     {
