Update package.json to Henrique's new email

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "author": "Sanity.io <hello@sanity.io>",
   "contributors": [
     {
-      "name": "Henrique Cavalieri",
-      "email": "henrique@kaordica.com.br"
+      "name": "Henrique Doro",
+      "email": "opensource@hdoro.dev"
     }
   ],
   "engines": {
