--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "outDir": "./lib",
     "target": "es2017",
     "declaration": true,
-    "lib": ["es2017", "dom", "esnext.asynciterable"]
+    "lib": ["es2017", "dom", "esnext.asynciterable"],
+    "skipLibCheck": true
   }
 }
