--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@bradleygriffith/gatsby-source-sanity",
+  "name": "gatsby-source-sanity",
   "description": "Gatsby source plugin for building websites using Sanity.io as a backend.",
-  "version": "6.0.4-patch2",
+  "version": "6.0.4",
   "author": "Sanity.io <hello@sanity.io>",
   "contributors": [
     "Henrique Doro <opensource@hdoro.dev>"
