--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gatsby-source-sanity",
   "description": "Gatsby source plugin for building websites using Sanity.io as a backend.",
-  "version": "6.0.4",
+  "version": "6.0.5",
   "author": "Sanity.io <hello@sanity.io>",
   "contributors": [
     {
@@ -57,6 +57,7 @@
     "@types/lodash": "^4.14.162",
     "@types/node": "^14.14.3",
     "@types/pump": "^1.0.1",
+    "@types/react-dom": "^17.0.0",
     "@types/split2": "^2.1.6",
     "@types/through2": "^2.0.36",
     "eslint": "^7.12.0",
