--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "axios": "^0.21.0",
     "debug": "^4.2.0",
     "fs-extra": "^9.0.1",
-    "gatsby-plugin-image": "next",
     "get-stream": "^5.1.0",
     "lodash": "^4.17.20",
     "oneline": "^1.0.2",
@@ -65,12 +64,15 @@
     "eslint-config-prettier": "^6.14.0",
     "eslint-config-sanity": "^1.150.8",
     "gatsby": "^2.24.87",
+    "gatsby-plugin-image": "^0.7.0",
     "jest": "^26.6.1",
     "prettier": "^2.1.2",
+    "react": "^16.14.0",
     "ts-jest": "^26.4.2",
     "typescript": "^3.9.5"
   },
   "peerDependencies": {
-    "gatsby": "^2.2.0"
+    "gatsby": "^2.2.0",
+    "gatsby-plugin-image": "^0.7.0"
   }
 }
