--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "eslint-config-prettier": "^6.14.0",
     "eslint-config-sanity": "^1.150.8",
     "gatsby": "^2.24.87",
-    "gatsby-plugin-image": "^0.7.0",
+    "gatsby-plugin-image": "^1.0.0-next.3",
     "jest": "^26.6.1",
     "prettier": "^2.1.2",
     "react": "^16.14.0",
@@ -73,6 +73,6 @@
   },
   "peerDependencies": {
     "gatsby": "^2.2.0",
-    "gatsby-plugin-image": "^0.7.0"
+    "gatsby-plugin-image": "^1.0.0-next.3 | >=1.0.0"
   }
 }
