--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "eslint": "^7.12.0",
     "eslint-config-prettier": "^6.14.0",
     "eslint-config-sanity": "^1.150.8",
-    "gatsby": "^2.24.87",
+    "gatsby": "^3.0.0-next.4",
     "gatsby-plugin-image": "^1.0.0-next.3",
     "jest": "^26.6.1",
     "prettier": "^2.1.2",
@@ -72,7 +72,7 @@
     "typescript": "^3.9.5"
   },
   "peerDependencies": {
-    "gatsby": "^2.2.0",
+    "gatsby": "^3.0.0-next.4 | >=3.0.0",
     "gatsby-plugin-image": "^1.0.0-next.3 | >=1.0.0"
   }
 }
