--- a/package.json
+++ b/package.json
@@ -62,16 +62,16 @@
     "eslint": "^7.12.0",
     "eslint-config-prettier": "^6.14.0",
     "eslint-config-sanity": "^1.150.8",
-    "gatsby": "^3.0.0-next.4",
-    "gatsby-plugin-image": "^1.0.0-next.3",
+    "gatsby": "^3.0.3",
+    "gatsby-plugin-image": "^1.0.0",
     "jest": "^26.6.1",
     "prettier": "^2.1.2",
-    "react": "^16.14.0",
+    "react": "^17.0.1",
     "ts-jest": "^26.4.2",
     "typescript": "^3.9.5"
   },
   "peerDependencies": {
-    "gatsby": "^3.0.0-next.4 | >=3.0.0",
-    "gatsby-plugin-image": "^1.0.0-next.3 | >=1.0.0"
+    "gatsby": ">=3.0.0",
+    "gatsby-plugin-image": ">=1.0.0"
   }
 }
