build: enable downlevelIteration for pre es2015 targets

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "noUnusedLocals": true,
     "noImplicitReturns": true,
     "module": "commonjs",
+    "downlevelIteration": true,
     "removeComments": false,
     "preserveConstEnums": true,
     "skipLibCheck": true,
