chore: pin @types/node to 12 and add node 14 to travis ci matrix
also enable skiplibcheck to avoid type issues with fs-extra

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "module": "commonjs",
     "removeComments": false,
     "preserveConstEnums": true,
+    "skipLibCheck": true,
     "esModuleInterop": true,
     "sourceMap": true,
     "outDir": "./lib",
