--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "@types/fs-extra": "^9.0.2",
     "@types/jest": "^26.0.15",
     "@types/lodash": "^4.14.162",
-    "@types/node": "^14.14.3",
+    "@types/node": "12.0.0",
     "@types/pump": "^1.0.1",
     "@types/react-dom": "^17.0.0",
     "@types/split2": "^2.1.6",
