chore: add script for "publishing" tarball to local folder

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "build": "tsc && tsc -t ES5 --outDir lib-es5",
     "format": "prettier --write src/**/*.{ts,tsx}",
     "watch": "tsc --watch & tsc && tsc -t ES5 --outDir lib-es5 --watch",
+    "publish-local": "npm run prepublishOnly && npm version prerelease --no-git-tag-version && npm pack && mkdirp .tarballs && mv gatsby-source-sanity-*.tgz .tarballs/ && echo 'published to .tarballs/'",
     "prepublishOnly": "npm run build && npm test"
   },
   "dependencies": {
@@ -65,6 +66,7 @@
     "gatsby": "^3.0.3",
     "gatsby-plugin-image": "^1.0.0",
     "jest": "^26.6.1",
+    "mkdirp": "^1.0.4",
     "prettier": "^2.1.2",
     "react": "^17.0.1",
     "ts-jest": "^26.4.2",
