--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "get-stream": "^5.1.0",
     "lodash": "^4.17.20",
     "oneline": "^1.0.2",
-    "pump": "^3.0.0",
+    "pumpify": "^2.0.1",
     "rxjs": "^6.6.3",
     "split2": "^3.2.2",
     "through2": "^3.0.1",
@@ -56,7 +56,6 @@
     "@types/jest": "^26.0.15",
     "@types/lodash": "^4.14.162",
     "@types/node": "12.0.0",
-    "@types/pump": "^1.0.1",
     "@types/react-dom": "^17.0.0",
     "@types/split2": "^2.1.6",
     "@types/through2": "^2.0.36",
