--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "esModuleInterop": true,
     "sourceMap": true,
     "outDir": "./lib",
+    "resolveJsonModule": true,
     "target": "es2017",
     "declaration": true,
     "lib": ["es2017", "dom", "esnext.asynciterable"]
