--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     }
   ],
   "engines": {
-    "node": ">=8.0.0"
+    "node": ">=12.13.0"
   },
   "repository": "https://github.com/sanity-io/gatsby-source-sanity",
   "homepage": "https://github.com/sanity-io/gatsby-source-sanity#readme",
@@ -72,7 +72,7 @@
     "typescript": "^4.2.3"
   },
   "peerDependencies": {
-    "gatsby": ">=3.0.0",
-    "gatsby-plugin-image": ">=1.0.0"
+    "gatsby": "^3.0.0",
+    "gatsby-plugin-image": "^1.0.0"
   }
 }
