--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "eslint-config-sanity": "^5.1.0",
     "gatsby": "^3.0.3",
     "gatsby-plugin-image": "^1.0.0",
+    "gatsby-plugin-utils": "^1.12.0",
     "jest": "^26.6.1",
     "mkdirp": "^1.0.4",
     "prettier": "^2.1.2",
