--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "typescript": "^4.2.3"
   },
   "peerDependencies": {
-    "gatsby": "^3.0.0",
+    "gatsby": "^3.0.0 || ^4.0.0-next.0",
     "gatsby-plugin-image": "^1.0.0"
   }
 }
