--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gatsby-source-sanity",
   "description": "Gatsby source plugin for building websites using Sanity.io as a backend.",
-  "version": "7.1.0-next.1",
+  "version": "7.1.0-next.2",
   "author": "Sanity.io <hello@sanity.io>",
   "contributors": [
     {
@@ -40,38 +40,38 @@
     "@types/url-parse": "^1.4.4",
     "axios": "^0.23.0",
     "debug": "^4.3.2",
-    "gatsby-plugin-utils": "^1.13.0",
+    "gatsby-plugin-utils": "^2.0.0",
     "get-stream": "^6.0.1",
     "lodash": "^4.17.21",
     "oneline": "^1.0.3",
     "pumpify": "^2.0.1",
     "rxjs": "^6.6.3",
-    "split2": "^3.2.2",
-    "through2": "^3.0.1",
+    "split2": "^4.0.0",
+    "through2": "^4.0.2",
     "url-parse": "^1.5.3"
   },
   "devDependencies": {
     "@types/debug": "^4.1.7",
     "@types/jest": "^27.0.2",
-    "@types/lodash": "^4.14.175",
-    "@types/node": "16.11.0",
-    "@types/react-dom": "^17.0.9",
+    "@types/lodash": "^4.14.176",
+    "@types/node": "^16.11.3",
+    "@types/react-dom": "^17.0.10",
     "@types/split2": "^3.2.1",
     "@types/through2": "^2.0.36",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-sanity": "^5.1.0",
-    "gatsby": "^3.13.0",
-    "gatsby-plugin-image": "^1.13.0",
-    "jest": "^27.2.5",
+    "gatsby": "^4.0.0",
+    "gatsby-plugin-image": "^2.0.0",
+    "jest": "^27.3.1",
     "mkdirp": "^1.0.4",
     "prettier": "^2.4.1",
     "react": "^17.0.2",
-    "ts-jest": "^27.0.6",
+    "ts-jest": "^27.0.7",
     "typescript": "^4.2.3"
   },
   "peerDependencies": {
-    "gatsby": "^3.0.0 || ^4.0.0-next.0",
-    "gatsby-plugin-image": "^1.0.0"
+    "gatsby": "^3.0.0 || ^4.0.0",
+    "gatsby-plugin-image": "^1.0.0 || ^2.0.0"
   }
 }
