--- a/package.json
+++ b/package.json
@@ -54,14 +54,14 @@
     "@types/debug": "^4.1.7",
     "@types/jest": "^27.0.2",
     "@types/lodash": "^4.14.176",
-    "@types/node": "^16.11.5",
+    "@types/node": "^16.11.7",
     "@types/react-dom": "^17.0.10",
     "@types/split2": "^3.2.1",
     "@types/through2": "^2.0.36",
     "eslint": "^8.1.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-sanity": "^5.1.0",
-    "gatsby": "^4.0.0",
+    "gatsby": "^4.3.0-next.0",
     "gatsby-plugin-image": "^2.0.0",
     "jest": "^27.3.1",
     "mkdirp": "^1.0.4",
