--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "eslint": "^8.1.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-sanity": "^5.1.0",
-    "gatsby": "^4.3.0-next.0",
+    "gatsby": "^4.2.0",
     "gatsby-plugin-image": "^2.0.0",
     "jest": "^27.3.1",
     "mkdirp": "^1.0.4",
