--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gatsby-source-sanity",
   "description": "Gatsby source plugin for building websites using Sanity.io as a backend.",
-  "version": "7.2.1-next.1",
+  "version": "7.2.1",
   "author": "Sanity.io <hello@sanity.io>",
   "contributors": [
     {
