--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/url-parse": "^1.4.4",
     "axios": "^0.24.0",
     "debug": "^4.3.2",
+    "gatsby-core-utils": "^3.3.0",
     "gatsby-plugin-utils": "^2.0.0",
     "get-stream": "^6.0.1",
     "lodash": "^4.17.21",
@@ -63,7 +64,7 @@
     "eslint": "^8.1.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-sanity": "^5.1.0",
-    "gatsby": "^4.2.0",
+    "gatsby": "^4.3.0",
     "gatsby-plugin-image": "^2.0.0",
     "jest": "^27.3.1",
     "mkdirp": "^1.0.4",
