--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "axios": "^0.24.0",
     "debug": "^4.3.2",
     "gatsby-core-utils": "^3.3.0",
-    "gatsby-plugin-utils": "^2.0.0",
+    "gatsby-plugin-utils": "^3.5.0-next.0",
     "get-stream": "^6.0.1",
     "lodash": "^4.17.21",
     "oneline": "^1.0.3",
