--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "axios": "^0.24.0",
     "debug": "^4.3.2",
     "gatsby-core-utils": "^3.3.0",
-    "gatsby-plugin-utils": "^3.5.0-next.0",
+    "gatsby-plugin-utils": "^3.17.1",
     "get-stream": "^6.0.1",
     "lodash": "^4.17.21",
     "oneline": "^1.0.3",
@@ -64,8 +64,8 @@
     "eslint": "^8.1.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-sanity": "^5.1.0",
-    "gatsby": "^4.3.0",
-    "gatsby-plugin-image": "^2.0.0",
+    "gatsby": "^4.23.1",
+    "gatsby-plugin-image": "^2.23.1",
     "jest": "^27.3.1",
     "mkdirp": "^1.0.4",
     "prettier": "^2.4.1",
