chore: ready to use semantic-release

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,8 +47,7 @@ jobs:
 
   release:
     name: 'Semantic release'
-    # @TODO uncomment after dry-run is confirmed to be ok
-    # needs: test
+    needs: test
     runs-on: ubuntu-latest
     if: inputs.release == true
     steps:
@@ -63,8 +62,7 @@ jobs:
           cache: npm
       - run: npm ci
       # Branches that will release new versions are defined in .releaserc.json
-      # @TODO remove --dry-run when confirmed to be ok
-      - run: npx semantic-release --dry-run
+      - run: npx semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
