--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,68 +1,104 @@
+---
 name: CI & Release
+
+# Workflow name based on selected inputs. Fallback to default Github naming when expression evaluates to empty string
+run-name: >-
+  ${{
+    inputs.release && inputs.test && 'Build ➤ Test ➤ Publish to NPM' ||
+    inputs.release && !inputs.test && 'Build ➤ Skip Tests ➤ Publish to NPM' ||
+    github.event_name == 'workflow_dispatch' && inputs.test && 'Build ➤ Test' ||
+    github.event_name == 'workflow_dispatch' && !inputs.test && 'Build ➤ Skip Tests' ||
+    ''
+  }}
+
 on:
-  # Build on pushes to release branches
+  pull_request:
   push:
     branches: [main]
-  # Build on pull requests targeting release branches
-  pull_request:
-    branches: [main]
-  # https://docs.github.com/en/actions/managing-workflow-runs/manually-running-a-workflow
-  # https://github.com/sanity-io/semantic-release-preset/actions/workflows/ci.yml
   workflow_dispatch:
     inputs:
+      test:
+        description: 'Run tests'
+        required: true
+        default: true
+        type: boolean
       release:
-        description: 'Release new version'
+        description: 'Publish new release'
         required: true
         default: false
         type: boolean
 
-jobs:
-  test:
-    runs-on: ${{ matrix.platform }}
-    name: Node.js ${{ matrix.node-version }} / ${{ matrix.platform }}
-    strategy:
-      fail-fast: false
-      matrix:
-        platform: [ubuntu-latest]
-        # Test the oldest Node.js version we support, the latest LTS release and the current version in development
-        node-version: [12, lts/*, current]
-        include:
-          # mac and windows only need to test the LTS version of node
-          - platform: macos-latest
-            node-version: lts/*
-          - platform: windows-latest
-            node-version: lts/*
-    steps:
-      - name: Set git to use LF
-        run: |
-          git config --global core.autocrlf false
-          git config --global core.eol lf
-      - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # tag=v3
-      - uses: actions/setup-node@969bd2663942d722d85b6a8626225850c2f7be4b # tag=v3
-        with:
-          node-version: ${{ matrix.node-version }}
-      - run: npm install
-      - run: npm run build
-      - run: npm test
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
+  cancel-in-progress: true
 
-  release:
-    name: 'Semantic release'
-    needs: test
+jobs:
+  build:
     runs-on: ubuntu-latest
-    if: inputs.release == true
     steps:
-      - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # tag=v3
-        with:
-          # Need to fetch entire commit history to
-          # analyze every commit since last release
-          fetch-depth: 0
-      - uses: actions/setup-node@969bd2663942d722d85b6a8626225850c2f7be4b # tag=v3
+      - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # tag=v3
+      - uses: actions/setup-node@8c91899e586c5b171469028077307d293428b516 # tag=v3
         with:
           node-version: lts/*
           cache: npm
       - run: npm ci
-      # Branches that will release new versions are defined in .releaserc.json
+      - run: npm run prepublishOnly
+
+  test:
+    needs: build
+    if: github.event.inputs.test != 'false'
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [macos-latest, ubuntu-latest, windows-latest]
+        node: [lts/*]
+        include:
+          - os: ubuntu-latest
+            node: lts/-2
+          - os: ubuntu-latest
+            node: current
+    steps:
+      - name: Set git to use LF
+        if: matrix.os == 'windows-latest'
+        run: |
+          git config --global core.autocrlf false
+          git config --global core.eol lf
+      - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # tag=v3
+      - uses: actions/setup-node@8c91899e586c5b171469028077307d293428b516 # tag=v3
+        with:
+          node-version: ${{ matrix.node }}
+          cache: npm
+      - run: npm i
+      - run: npm test
+
+  release:
+    needs: [build, test]
+    # only run if opt-in during workflow_dispatch
+    if: always() && github.event.inputs.release == 'true' && needs.build.result != 'failure' && needs.test.result != 'failure' && needs.test.result != 'cancelled'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # tag=v3
+        with:
+          # Need to fetch entire commit history to
+          # analyze every commit since last release
+          fetch-depth: 0
+      - uses: actions/setup-node@8c91899e586c5b171469028077307d293428b516 # tag=v3
+        with:
+          node-version: lts/*
+          cache: npm
+      - run: npm ci
+        # Branches that will release new versions are defined in .releaserc.json
       - run: npx semantic-release
+        # Don't allow interrupting the release step if the job is cancelled, as it can lead to an inconsistent state
+        # e.g. git tags were pushed but it exited before `npm publish`
+        if: always()
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
+        # Re-run semantic release with rich logs if it failed to publish for easier debugging
+      - run: npx semantic-release --dry-run --debug
+        if: failure()
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
