--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gatsby-source-sanity",
-  "version": "7.5.1",
+  "version": "7.5.2-valhalla.0",
   "description": "Gatsby source plugin for building websites using Sanity.io as a backend.",
   "keywords": [
     "gatsby",
@@ -33,7 +33,6 @@
     "build": "tsc && tsc -t ES5 --outDir lib-es5",
     "format": "prettier --write src/**/*.{ts,tsx}",
     "prepublishOnly": "npm run build",
-    "publish-local": "npm run prepublishOnly && npm version prerelease --no-git-tag-version && npm pack && mkdirp .tarballs && mv gatsby-source-sanity-*.tgz .tarballs/ && echo 'published to .tarballs/'",
     "test": "jest",
     "watch": "tsc --watch & tsc && tsc -t ES5 --outDir lib-es5 --watch"
   },
@@ -44,8 +43,8 @@
     "@types/url-parse": "^1.4.8",
     "axios": "^0.27.2",
     "debug": "^4.3.4",
-    "gatsby-core-utils": "^3.24.0",
-    "gatsby-plugin-utils": "^3.18.0",
+    "gatsby-core-utils": "^4.1.0",
+    "gatsby-plugin-utils": "^4.1.0",
     "get-stream": "^6.0.1",
     "lodash": "^4.17.21",
     "oneline": "^1.0.3",
@@ -69,21 +68,22 @@
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-sanity": "^6.0.0",
-    "gatsby": "^4.24.8",
-    "gatsby-plugin-image": "^2.24.0",
+    "gatsby": "^5.1.0",
+    "gatsby-plugin-image": "^3.1.0",
     "jest": "^27.5.1",
     "mkdirp": "^1.0.4",
     "prettier": "^2.7.1",
     "prettier-plugin-packagejson": "^2.3.0",
+    "prettier-plugin-tailwindcss": "^0.1.13",
     "react": "^18.2.0",
     "ts-jest": "^29.0.3",
     "typescript": "^4.9.3"
   },
   "peerDependencies": {
-    "gatsby": "^3.0.0 || ^4.0.0",
-    "gatsby-plugin-image": "^1.0.0 || ^2.0.0"
+    "gatsby": "^3.0.0 || ^4.0.0 || ^5.0.0",
+    "gatsby-plugin-image": "^1.0.0 || ^2.0.0 || ^3.0.0"
   },
   "engines": {
-    "node": ">=12.13.0"
+    "node": ">=14"
   }
 }
