chore: add test site for gatsby v5

--- a/examples/blog/package.json
+++ b/examples/blog/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "gatsby": "^5.0.0",
-    "gatsby-source-sanity": "7.5.2-valhalla.0",
+    "gatsby-plugin-image": "^3.1.0",
+    "gatsby-plugin-sharp": "^5.1.0",
+    "gatsby-source-sanity": "7.5.2-valhalla.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
