--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,19 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["github>sanity-io/renovate-presets//ecosystem/auto"]
+  "extends": ["github>sanity-io/renovate-presets//ecosystem/auto"],
+  "packageRules": [
+    {
+      "packageNames": ["gatsby-source-sanity"],
+      "rangeStrategy": "pin",
+      "schedule": ["at any time"]
+    },
+    {
+      "description": "Dependency updates to other package jsons than the root should always use the chore scope as they aren't published to npm",
+      "matchFiles": [
+        "examples/blog/package.json",
+      ],
+      "extends": [":semanticCommitTypeAll(chore)"],
+      "groupSlug": "examples"
+    }
+  ]
 }
