--- a/examples/blog/package.json
+++ b/examples/blog/package.json
@@ -11,7 +11,7 @@
     "gatsby": "^5.1.0",
     "gatsby-plugin-image": "^3.1.0",
     "gatsby-plugin-sharp": "^5.1.0",
-    "gatsby-source-sanity": "^7.6.0",
+    "gatsby-source-sanity": "7.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
