--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["github>sanity-io/renovate-presets//ecosystem/auto"],
+  "extends": ["github>sanity-io/renovate-presets//ecosystem/auto", ":reviewer(team:ecosystem)"],
   "packageRules": [
     {
       "packageNames": ["gatsby-source-sanity"],
