--- a/examples/blog/package.json
+++ b/examples/blog/package.json
@@ -1,5 +1,7 @@
 {
   "private": true,
+  "name": "example-blog",
+  "version": "1.0.0",
   "scripts": {
     "build": "gatsby build",
     "clean": "gatsby clean",
@@ -11,7 +13,7 @@
     "gatsby": "^5.5.0",
     "gatsby-plugin-image": "^3.5.0",
     "gatsby-plugin-sharp": "^5.5.0",
-    "gatsby-source-sanity": "7.6.2",
+    "gatsby-source-sanity": "*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -22,6 +24,6 @@
     "tailwindcss": "^3.2.4"
   },
   "engines": {
-    "node": "^18"
+    "node": ">= 18"
   }
 }
