--- a/package.json
+++ b/package.json
@@ -1,89 +1,13 @@
 {
-  "name": "gatsby-source-sanity",
-  "version": "7.8.1",
-  "description": "Gatsby source plugin for building websites using Sanity.io as a backend.",
-  "keywords": [
-    "gatsby",
-    "gatsby-plugin",
-    "gatsby-source-plugin"
-  ],
-  "homepage": "https://github.com/sanity-io/gatsby-source-sanity#readme",
-  "bugs": {
-    "url": "https://github.com/sanity-io/gatsby-source-sanity/issues"
-  },
-  "repository": "https://github.com/sanity-io/gatsby-source-sanity",
-  "license": "MIT",
-  "author": "Sanity.io <hello@sanity.io>",
-  "contributors": [
-    {
-      "name": "Henrique Doro",
-      "email": "opensource@hdoro.dev"
-    }
-  ],
-  "main": "index.js",
-  "types": "lib-es5/index.d.ts",
-  "files": [
-    "lib",
-    "lib-es5",
-    "src",
-    "gatsby-node.js",
-    "gatsby-ssr.js"
+  "private": true,
+  "workspaces": [
+    "packages/*",
+    "examples/*"
   ],
   "scripts": {
-    "build": "tsc && tsc -t ES5 --outDir lib-es5",
-    "format": "prettier --write src/**/*.{ts,tsx}",
-    "prepublishOnly": "npm run build",
-    "test": "jest",
-    "watch": "tsc --watch & tsc && tsc -t ES5 --outDir lib-es5 --watch"
-  },
-  "dependencies": {
-    "@sanity/client": "^3.4.1",
-    "@sanity/image-url": "^1.0.2",
-    "@sanity/mutator": "^2.33.2",
-    "@types/url-parse": "^1.4.8",
-    "axios": "^0.27.2",
-    "debug": "^4.3.4",
-    "gatsby-core-utils": "^4.5.0",
-    "gatsby-plugin-utils": "^4.5.0",
-    "get-stream": "^6.0.1",
-    "lodash": "^4.17.21",
-    "oneline": "^1.0.3",
-    "pumpify": "^2.0.1",
-    "rxjs": "^6.6.7",
-    "semver": "^7.3.8",
-    "split2": "^4.1.0",
-    "through2": "^4.0.2",
-    "url-parse": "^1.5.10"
-  },
-  "devDependencies": {
-    "@sanity/semantic-release-preset": "^4.0.0",
-    "@types/debug": "^4.1.7",
-    "@types/jest": "^29.4.0",
-    "@types/lodash": "^4.14.191",
-    "@types/node": "^18.11.18",
-    "@types/react-dom": "^18.0.10",
-    "@types/semver": "^7.3.13",
-    "@types/split2": "^4.0.0",
-    "@types/through2": "^2.0.38",
-    "eslint": "^8.33.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-config-sanity": "^6.0.0",
-    "gatsby": "^5.5.0",
-    "gatsby-plugin-image": "^3.5.0",
-    "jest": "^29.4.1",
-    "mkdirp": "^2.1.3",
-    "prettier": "^2.8.3",
-    "prettier-plugin-packagejson": "^2.4.2",
-    "prettier-plugin-tailwindcss": "^0.4.0",
-    "react": "^18.2.0",
-    "ts-jest": "^29.0.5",
-    "typescript": "^5.0.0"
-  },
-  "peerDependencies": {
-    "gatsby": "^3.0.0 || ^4.0.0 || ^5.0.0",
-    "gatsby-plugin-image": "^1.0.0 || ^2.0.0 || ^3.0.0"
-  },
-  "engines": {
-    "node": ">=14"
+    "build": "npm run build -w gatsby-source-sanity",
+    "format": "npm run format -w gatsby-source-sanity",
+    "prepublishOnly": "npm run prepublishOnly -w gatsby-source-sanity",
+    "test": "npm run test -w gatsby-source-sanity"
   }
 }
