chore: adapt workspaces

--- a/examples/blog/package.json
+++ b/examples/blog/package.json
@@ -1,5 +1,7 @@
 {
   "private": true,
+  "name": "example-blog",
+  "version": "1.0.0",
   "scripts": {
     "build": "gatsby build",
     "clean": "gatsby clean",
