chore: configure the blog example to use the local package

--- a/examples/blog/package.json
+++ b/examples/blog/package.json
@@ -13,7 +13,7 @@
     "gatsby": "^5.5.0",
     "gatsby-plugin-image": "^3.5.0",
     "gatsby-plugin-sharp": "^5.5.0",
-    "gatsby-source-sanity": "7.6.2",
+    "gatsby-source-sanity": "*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
