chore: proxy the script commands into the package workspace

--- a/package.json
+++ b/package.json
@@ -3,5 +3,11 @@
   "workspaces": [
     "packages/*",
     "examples/*"
-  ]
+  ],
+  "scripts": {
+    "build": "npm run build -w gatsby-source-sanity",
+    "format": "npm run format -w gatsby-source-sanity",
+    "prepublishOnly": "npm run prepublishOnly -w gatsby-source-sanity",
+    "test": "npm run test -w gatsby-source-sanity"
+  }
 }
