--- a/examples/cdrs/package.json
+++ b/examples/cdrs/package.json
@@ -15,6 +15,10 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "babel-jest": "^29.7.0",
+    "babel-preset-gatsby": "^3.12.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
     "prettier": "^2.8.8"
   },
   "keywords": [
@@ -28,7 +32,7 @@
     "start": "gatsby develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
