--- a/packages/gatsby-source-sanity/package.json
+++ b/packages/gatsby-source-sanity/package.json
@@ -57,7 +57,7 @@
     "url-parse": "^1.5.10"
   },
   "devDependencies": {
-    "@sanity/semantic-release-preset": "^4.0.0",
+    "@sanity/semantic-release-preset": "^4.1.1",
     "@types/debug": "^4.1.7",
     "@types/jest": "^29.4.0",
     "@types/lodash": "^4.14.191",
@@ -77,6 +77,7 @@
     "prettier-plugin-packagejson": "^2.4.2",
     "prettier-plugin-tailwindcss": "^0.4.0",
     "react": "^18.2.0",
+    "semantic-release": "^21.1.1",
     "ts-jest": "^29.0.5",
     "typescript": "^5.0.0"
   },
